# lol_qq_parser

./: pyproject.toml
.github/workflows/: pr_tests_python.yml
data/matchDetail/: 10787.json  11365.json  8108.json  8269.json
lol_qq_parser/parsers/: match_detail.py
lol_qq_parser/schemas/: match_detail.py
lol_qq_parser/utils/: __init__.py  config.py  get_player_name.py  series_dto.py
tests/: test_connection.py  test_match_detail.py
tests/data/matchDetail/: 10787.json  10933.json  11365.json  8108.json  8269.json
