[tool.poetry]
name = "lol_qq_parser"
version = "0.1.6"
description = "A League of Legends parser for QQ data"
authors = ["mrtolkien <gary.mialaret@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
lol-dto = {git = "https://github.com/Leaguepedia/lol_dto.git"}
pydantic = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pandas = "^2.3.0"
datamodel-code-generator = "^0.52.0"
fastapi = "^0.128.0"
orjson = "^3.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
